--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <h1 class="titulo">Gener</h1>
     </header>
-    <div class="caja1">blau</div>
-    <div class="caja2">Roig</div>
-    <div class="caja3">Groc</div>
+    <div class="caja1"></div>
+    <div class="caja2"></div>
+    <div class="caja3"></div>
 
     <br>
 
