--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <p>Cal <u>estudiar</u></p>
      
     <hr>
+    <footer>
     <div class="azul">
         <p>Web realizada por Daniela</p>
     </div>
+    </footer>
 </body>
 </html>
